<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/welcome_header"
        android:text="@string/welcome_header"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        style="@style/TextAppearance.AppCompat.Display3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/connection_status_header"
        android:id="@+id/connection_status_header"
        android:layout_below="@+id/welcome_header"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/connection_status"
        android:id="@+id/connection_status"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/connection_status_header"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection_button"
        android:id="@+id/connection_button"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/connection_status"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/detected_gesture_header"
        android:id="@+id/detected_gesture_header"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/connection_button"
        android:layout_alignStart="@+id/connection_status_header" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/detected_gesture"
        android:id="@+id/detected_gesture"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/detected_gesture_header"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
